--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>developer-portfolio</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     
 </head>
 <body>
+<section class="header-section">
+    <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1> <span class="orange-color">Ataul Hossain</span> World</h1>
+        <h3>Assistant Teacher of Fulbari High School</h3>
+        <p>
+            Hi, This is Ataul. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos tempora eligendi facilis tenetur excepturi atque rem deserunt dolores tempore aut distinctio nam ipsam maiores sequi recusandae, officiis rerum aperiam. Facilis, dolor maxime aliquam porro repellendus earum laudantium dolores nobis explicabo.
+        </p>
+        <a class="link-button" target="_blank" href="https://programminghero1.github.io/developer-portfolio/">Hire Me</a>
+    </div>
+
+    <div class="half-width">
+        <img src="./images/./IMG_20211115_124717-removebg-preview.png" alt="">
+    </div>
+
+</section>
     
 </body>
 </html>
